# Nexus

./: .gitattributes  .gitignore  CONTRIBUTING.md  LANGGRAPH_E2E_TEST.py  LICENSE  PROJECT_STATUS.md  README.md  ROADMAP.md  SECURITY.md  SPEC.md  V1_8_AGENT_ROLES.md  _clear_state.py  _dash_runner.py  _e2e_test.py  _git_commit.bat  _git_commit2.bat  _git_commit3.bat  _git_commit4.bat  _git_push.bat  _git_revert.bat  _run_daemon.py  _run_dash.bat  _run_dashboard.bat  _run_dashboard.ps1  _test_spawn.py  _test_spawn2.py  dashboard_simple.py  live_test.py  main.py  pmo_server.err  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
api/: app.py
apps/l1gov-desktop-client/src-tauri/: Cargo.toml  tauri.conf.json
apps/l1gov-desktop-client/src-tauri/src/: main.rs
artifacts/: GC-DELIVERY-001.md  GC-HANDOVER-001.md  GC-VALIDATION-001.md
config/: agents.yaml  agents_uat.yaml  resident_controller.example.yaml
docs/: PMO_V1_WEB_UI_ARCH.md
games/: README.md  __init__.py  grid_escape.py
gov_nodes/: edges.py  pipeline.py  state.py
governance/: README.md  V1_9_DELIVERY_PACKAGE.md  V1_9_EXECUTION_PLAN.md  __init__.py
handoff/: phase3_real_runtime_readiness_remediation_checklist.md
nexus/: README.md
pmo_web_ui/: main.py  v1_governance.py
tests/: test_cli_commands.py  test_collaborators.py  test_intake_sprint1.py  test_persistence.py  test_queue_models.py  test_task_models.py
tmp/: wbs_7_17_thunder_cleanup_package_for_nova_2026-05-21.md  wbs_7_17_thunder_implementation_package_2026-05-21.md  wbs_7_17_thunder_pre_edit_package_2026-05-21.md  (+1 more)
(+1123 files in other folders)
