[package]
name = "nexus-l1gov-desktop-client"
version = "0.0.0-slice012"
description = "Nexus L1 Governance UX test surface"
edition = "2021"

[build-dependencies]
tauri-codegen = { version = "=2.0.0", features = [] }
tauri-build = { version = "=2.0.0", features = [] }

[dependencies]
tauri = { version = "=2.0.0", features = [] }
tauri-runtime = { version = "=2.0.0", features = [] }
tauri-runtime-wry = { version = "=2.0.0", features = [] }
tauri-utils = { version = "=2.0.0", features = [] }
